fix safari bug not centered buttons on login

--- a/app/styles/components/_bigstep.scss
+++ b/app/styles/components/_bigstep.scss
@@ -48,5 +48,6 @@
 		min-width: 8rem;
 		margin-left: 1rem;
 		margin-right: 1rem;
+		display: inline-block;
 	}
 }
